[gd_scene format=3 uid="uid://c7t2rtkx5qxuc"]

[ext_resource type="Script" uid="uid://c24oq8vtp02t8" path="res://scripts/ui/settings_menu.gd" id="1_qwcqe"]

[node name="SettingsMenu" type="PanelContainer" unique_id=1784414410]
custom_minimum_size = Vector2(0, 120)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = -25.0
offset_right = 156.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwcqe")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1699164813]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer" unique_id=2126898022]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer" unique_id=134029043]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="LabelMusicVolume" type="Label" parent="VBoxContainer/GridContainer" unique_id=298541061]
layout_mode = 2
text = "Music Volume"

[node name="LabelMusicVolumeValue" type="Label" parent="VBoxContainer/GridContainer" unique_id=1287868779]
unique_name_in_owner = true
layout_mode = 2
text = "50 %"

[node name="HSliderMusicVol" type="HSlider" parent="VBoxContainer/GridContainer" unique_id=342139293]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="LabelMouseSensitivity" type="Label" parent="VBoxContainer/GridContainer" unique_id=411341289]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="LabelMouseSensitivityValue" type="Label" parent="VBoxContainer/GridContainer" unique_id=541056833]
unique_name_in_owner = true
layout_mode = 2
text = "50 %"

[node name="HSliderMouseSensitivity" type="HSlider" parent="VBoxContainer/GridContainer" unique_id=1143476482]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ButtonBack" type="Button" parent="VBoxContainer" unique_id=376403747]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/GridContainer/HSliderMusicVol" to="." method="_on_h_slider_music_vol_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/HSliderMouseSensitivity" to="." method="_on_h_slider_mouse_sensitivity_value_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
